✨ feat(Diseño): Realizar estilos

--- a/RestoStock/Pages/DetallesPlatos/Index.cshtml
+++ b/RestoStock/Pages/DetallesPlatos/Index.cshtml
@@ -55,35 +55,8 @@
 </div>
 
 @section Styles {
-    <style>
-        .table-danger {
-            background-color: #f8d7da;
-        }
-
-        .btn-outline-danger:hover {
-            background-color: #dc3545;
-            color: white;
-        }
-
-        .btn-outline-dark:hover {
-            background-color: #343a40;
-            color: white;
-        }
-
-        tbody tr:hover {
-            background-color: #f1f1f1;
-        }
-
-        .table-bordered {
-            border: 1px solid #dc3545;
-        }
-
-        .text-danger {
-            color: #dc3545 !important;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/site.css" />
 }
-
 @section Scripts {
     <script src="~/js/site.js"></script>
 }
