--- a/RestoStock/Pages/Platos/Index.cshtml
+++ b/RestoStock/Pages/Platos/Index.cshtml
@@ -1,13 +1,23 @@
 ﻿@page
 @model RestoStock.Pages.Platos.IndexModel
 @{
-	ViewData["Title"] = "Index Platos";
+    ViewData["Title"] = "Index de Platos";
 }
 
-<h1>Index Platos</h1>
+<h1 class="text-center mb-4 text-danger">Detalles de Platos</h1>
+
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <i class="bi bi-check-circle me-2"></i> @TempData["SuccessMessage"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
 
 <p>
-    <a asp-page="Create" class="btn btn-success">Create New</a>
+    <a asp-page="Create" class="btn btn-danger">
+        <i class="bi bi-plus-circle me-1"></i> Agregar Nuevo
+    </a>
 </p>
 
 <table class="table">
@@ -22,7 +32,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Platos[0].Descripcion)
             </th>
-            <th>Actions</th>
+            <th>Acciones</th>
         </tr>
     </thead>
     <tbody>
@@ -39,10 +49,18 @@
                     @Html.DisplayFor(modelItem => item.Descripcion)
                 </td>
                 <td>
-                    <a asp-page="./Edit" asp-route-id="@item.IdPlato" class="btn btn-warning">Edit</a> |
-                    <a asp-page="./Delete" asp-route-id="@item.IdPlato" class="btn btn-danger">Delete</a>
+                    <a asp-page="./Edit" asp-route-id="@item.IdPlato" class="btn btn-warning">Editar</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.IdPlato" class="btn btn-danger">Eliminar</a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+
+@section Styles {
+    <link rel="stylesheet" href="/css/site.css" />
+}
+
+@section Scripts {
+    <script src="~/js/site.js"></script>
+}
